tests/valid_programs/basics/hello_world3.duck
use std::{io};

fn main() {
    io::println("imported io");
}
