tests/errors/require_string_literal_give_wrong_const_string.duck
fn main() {
    let str: "const string" = "other const string";
}
